# blog-app

./: LICENSE  MANIFEST.in  PKG-INFO  README.rst  db.sqlite3  manage.py  pyproject.toml  setup.py
blog/: models.py  tests.py  urls.py  validation.py  views.py
blog/static/blog/: .style.css.swp  style.css
blog/static/blog/post_detail/: .style.css.swp  style.css
blog/templates/blog/: .index.html.swp  detail.html  index.html
blog/tests/: .test_models.py.swp  .test_views.py.swp  test_models.py  test_views.py
django_blog/: admin.py  apps.py  models.py  urls.py  validation.py  views.py
django_blog.egg-info/: SOURCES.txt  requires.txt
django_blog/static/blog/: style.css
django_blog/tests/: test_models.py  test_views.py
learning/: settings.py  urls.py
